# ZaslonV3

./: CMakeLists.txt  CMakePresets.json  README.md  ZASLON_Evaluation.md  Zaslon.code-workspace  autorun_scanner.cpp  autorun_scanner.h  block_taskmgr.ps1  build.bat  dashboard.cpp  dashboard.h  file_explorer.cpp  file_explorer.h  fix_arrays.py  fix_localization.py  fix_pe.py  gui_theme.cpp  gui_theme.h  gui_utils.h  help_tab.cpp  help_tab.h  implementation_plan.md.resolved  installer_tracker.cpp  installer_tracker.h  integrity_module.cpp  integrity_module.h  main.cpp  ntapi_defs.h  offline_os_manager.cpp  offline_os_manager.h  offline_registry.cpp  offline_registry.h  prepare_resources.ps1  process_panel.cpp  process_panel.h  resource.h  restrictions_manager.cpp  restrictions_manager.h  svg_icons.cpp  svg_icons.h  (+41 more)
